<resources>
    <string name="app_name">MyKid</string>
    <string name="new_activity">New Activity</string>
    <string name="activity_name">Activity Name</string>
    <string name="location">Location</string>
    <string name="date">Date of Activity</string>
    <string name="time">Time</string>
    <string name="reporter_name">Name of Reporter</string>
    <string name="empty_error">This field must not be empty</string>
    <string name="invalid_error">Invalid name</string>
    <string name="confirm">Confirmation</string>
    <string name="list_empty">No activities to show</string>
    <string name="delete_menu">Delete</string>
    <string name="search_menu">Search activity</string>
    <string name="sort_menu">Sort by...</string>
    <string name="sort_alphabet_asc">A-Z</string>
    <string name="sort_alphabet_des">Z-A</string>
    <string name="sort_date_asc">Date (oldest)</string>
    <string name="sort_date_des">Date (newest)</string>
    <string name="details_tab">Details</string>
    <string name="images_tab">Images</string>
    <string name="image_empty">No image available</string>
</resources>
