<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_menu"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_menu"
        app:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="single"
                android:enabled="true">
                <item
                    android:id="@+id/action_alpha_asc"
                    android:checked="true"
                    android:title="@string/sort_alphabet_asc" />
                <item
                    android:id="@+id/action_alpha_desc"
                    android:title="@string/sort_alphabet_des" />
                <item
                    android:id="@+id/action_date_asc"
                    android:title="@string/sort_date_asc" />
                <item
                    android:id="@+id/action_date_desc"
                    android:title="@string/sort_date_des" />
            </group>
        </menu>
    </item>
</menu>